test/scc/ext/tm/semantic-errors/011.a
011.t:7:7: error: volatile objects cannot be used within _Transaction_safe function